plugins {
	id 'java'
    id 'io.freefair.lombok' version '6.6-rc1'
    id 'com.github.sherter.google-java-format' version '0.9'
}

group 'com.github.antoinejt'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

dependencies {
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
	useJUnitPlatform()
	failFast = true
}

compileJava.dependsOn verifyGoogleJavaFormat
